corrected wrong fonts

--- a/client/guardino-frontend/src/app/components/agents-page/widgets/agent-list/agent-list.component.scss
+++ b/client/guardino-frontend/src/app/components/agents-page/widgets/agent-list/agent-list.component.scss
@@ -16,6 +16,7 @@
 
 .agents-table-header .title {
   font-weight: 600;
+  font-size: 1rem;
 }
 
 .agents-table-header .subtitle {
